// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypographyStyles Get a correct typography styles 1`] = `
Object {
  "general": Object {
    "color": "rgb(255, 99, 71)",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "3",
    "letter-spacing": "2px",
    "line-height": "1",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "l": Object {
    "color": "rgb(255, 99, 71)",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "-20px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "m": Object {
    "color": "rgb(255, 99, 71)",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "30px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "s": Object {
    "color": "rgb(255, 99, 71)",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "xl": Object {
    "color": "rgb(255, 99, 71)",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "xs": Object {
    "color": "rgb(255, 99, 71)",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "xxl": Object {
    "color": "rgb(255, 99, 71)",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
}
`;

exports[`getTypographyStyles Get a correct typography styles with hover 1`] = `
Object {
  "general": Object {
    "color": "var(--maxi-light-p-color-hover,rgba(var(--maxi-light-color-3,155,155,155),1))",
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "italic",
    "font-weight": "500",
    "letter-spacing": "2px",
    "line-height": "1px",
    "text-decoration": "overline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "uppercase",
    "vertical-align": "none",
  },
  "l": Object {
    "color": "var(--maxi-light-p-color-hover,rgba(var(--maxi-light-color-6,201,52,10),10))",
    "font-family": "roboto",
    "font-size": "10px",
    "font-style": "oblique",
    "font-weight": "200",
    "letter-spacing": "2px",
    "line-height": "40px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "lowercase",
    "vertical-align": "none",
  },
  "m": Object {
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "s": Object {
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "xl": Object {
    "font-family": "roboto",
    "font-size": "22px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "24.2px",
    "line-height": "4px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "xs": Object {
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
  "xxl": Object {
    "font-family": "roboto",
    "font-size": "1px",
    "font-style": "bold",
    "font-weight": "4",
    "letter-spacing": "3px",
    "line-height": "2px",
    "text-decoration": "underline",
    "text-indent": "10px",
    "text-shadow": "none",
    "text-transform": "none",
    "vertical-align": "none",
  },
}
`;
